<resources>
    <string name="app_name">MyWeatherAppSchool</string>
    <string name="title_settings">Settings</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="language">Language</string>
    <string name="temp_c" translatable="false">ºC</string>
    <string name="temp_f" translatable="false">ºF</string>
    <string name="lang_pt">Portuguese</string>
    <string name="lang_en">English</string>
    <string name="save">SAVE</string>
    <string name="pref_file" translatable="false">prefFile</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
</resources>