<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.config.ConfigFragment">

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/rg_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_temp"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_c" />

        <RadioButton
            android:id="@+id/rb_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_f" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_temp"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/rg_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lang"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lang_pt" />

        <RadioButton
            android:id="@+id/rb_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lang_en" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_lang"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>